--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "name": "uiTrain",
     "description": "A bundle of useful files for UI development.",
     "version": "2.1.2",
-    "isApp": true,
-    "permissions": {
+	"isApp": false,
+	"permissions": {
         "client":{
 			"disconnect": true,
 			"construct": true,
